modify configuration to run vscode proxy
Signed-off-by: YangKeao <keao.yang@yahoo.com>

--- a/helm/chaos-mesh/templates/secrets-configuration.yaml
+++ b/helm/chaos-mesh/templates/secrets-configuration.yaml
@@ -87,6 +87,7 @@ webhooks:
         name: {{ template "chaos-mesh.svc" . }}
         namespace: {{ .Release.Namespace | quote }}
         path: "/inject-v1-pod"
+        port: 10443
     rules:
       - operations: [ "CREATE" ]
         apiGroups: [""]
@@ -107,6 +108,7 @@ webhooks:
         name: {{ template "chaos-mesh.svc" $ }}
         namespace: {{ $.Release.Namespace | quote }}
         path: /mutate-chaos-mesh-org-v1alpha1-{{ $crd }}
+        port: 10443
     failurePolicy: Fail
     name: m{{ $crd }}.kb.io
     {{- if $supportTimeoutSeconds }}
@@ -149,6 +151,7 @@ webhooks:
         name: {{ template "chaos-mesh.svc" $ }}
         namespace: {{ $.Release.Namespace | quote }}
         path: /validate-chaos-mesh-org-v1alpha1-{{ $crd }}
+        port: 10443
     failurePolicy: Fail
     name: v{{ $crd }}.kb.io
     {{- if $supportTimeoutSeconds }}
@@ -191,6 +194,7 @@ webhooks:
         name: {{ template "chaos-mesh.svc" $ }}
         namespace: {{ $.Release.Namespace | quote }}
         path: /validate-auth
+        port: 10443
     failurePolicy: Fail
     name: vauth.kb.io
     rules:
